fix: Update operating systems to current selection

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,8 @@
 		<div class="flex between">
 			<div>
 				<p>
-					This page was last updated on September 29th, 2022
-					(4 Tishrei 5783)
+					This page was last updated on February 19th, 2023
+					(28 Shevat 5783)
 				</p>
 			</div>
 			<div>
@@ -124,12 +124,9 @@
 							<a href="https://github.com/doomemacs/doomemacs">
 							Doom</a></em> on
 							<em><a href="https://www.trisquel.info">Trisquel
-							GNU/Linux</a></em>,
-							<em><a href="https://www.freebsd.org">
-							FreeBSD</a></em>, and
-							<em><a href="https://pop.system76.com">
-							Pop! OS</a></em>.
-							I am a proud associate member of the 
+							GNU/Linux</a></em> and
+							<em><a href="https://almalinux.org">AlmaLinux</a>.
+							I am a proud associate member of the
 							<em>Free Software Foundation</em>.
 						</p>
 						<br />
@@ -181,8 +178,8 @@
 				<p>
 					Web page source available under the terms of the BSD
 					2-Clause License
-					(<a href="https://github.com/rachelmichaela/
-					cse.unl.edu">repository</a>).
+					(<a href="https://git.rami.org.il/rami/cse-unl-edu">
+					repository</a>).
 				</p>
 			</div>
 		</div>
