duty: Update copyright year

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -159,7 +159,7 @@
 			</div>
 			<div>
 				<p>
-					Copyright &copy; 2021, 2022 Rachel Michaela Bradley.
+					Copyright &copy; 2021, 2022, 2023 Rachel Michaela Bradley.
 				</p>
 				<p>
 					Verbatim copying and distribution of this entire article
