fix: Use new hyperlink for git repository

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -170,8 +170,8 @@
 				<p>
 					Web page source available under the terms of the BSD
 					2-Clause License
-					(<a href="https://git.rami.org.il/rami/cse-unl-edu">
-					repository</a>).
+					(<a href="https://git.rami.org.il/
+							  cse-unl-edu">repository</a>).
 				</p>
 			</div>
 		</div>
