duty: Update last change date

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,8 @@
 		<div class="flex between">
 			<div>
 				<p>
-					This page was last updated on February 19th, 2023
-					(28 Shevat 5783)
+					This page was last updated on March 9th, 2023
+					(17 Adar 5783)
 				</p>
 			</div>
 			<div>
@@ -170,8 +170,8 @@
 				<p>
 					Web page source available under the terms of the BSD
 					2-Clause License
-					(<a href="https://git.rami.org.il/
-							  cse-unl-edu">repository</a>).
+					(<a href="
+						https://git.rami.org.il/cse-unl-edu">repository</a>).
 				</p>
 			</div>
 		</div>
