add: Reference PhD admission

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,8 @@
 		<div class="flex between">
 			<div>
 				<p>
-					This page was last updated on March 9th, 2023
-					(17 Adar 5783)
+					This page was last updated on May 11th, 2023
+					(20 Iyar 5783)
 				</p>
 			</div>
 			<div>
@@ -55,8 +55,7 @@
 				<p>
 					<strong>
 						<em>
-							Graduate Student, Master of Science, Computer
-							Science
+							Graduate Student, MS-PhD, Computer Science
 						</em>
 					</strong>
 				</p>
